fix: MYZ-7499 footer overflow

--- a/src/components/card/z-card-footer/styles.css
+++ b/src/components/card/z-card-footer/styles.css
@@ -49,13 +49,16 @@ footer.isopen.trial > h2 {
   background-color: var(--accent);
 }
 
-footer > div {
-  padding: var(--basex1) var(--basex2);
+footer > div.content {
   height: 40px;
   overflow: hidden;
 }
 
-footer > div > p {
+footer > div.content > div {
+  padding: var(--basex1) var(--basex2);
+}
+
+footer > div.content > div > p {
   font-size: 14px;
   height: 20px;
   line-height: 20px;
@@ -66,36 +69,41 @@ footer > div > p {
   text-overflow: ellipsis;
 }
 
-footer > div > p.year_isbn {
+footer > div.content > div > p.year_isbn {
   padding-top: var(--basex1);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-footer > div > p.year_isbn > span.isbn {
+footer > div.content > div > p.year_isbn > span.isbn {
   text-overflow: ellipsis;
   overflow: hidden;
 }
 
-footer.isopen > div {
+footer.isopen > div.content > div {
   height: 70px;
 }
 
-footer.isopen > div > p.year_isbn {
+footer.isopen > div.content > div > p.year_isbn {
   flex-direction: column;
   height: 50px;
   padding-left: 0px;
 }
 
-footer.isopen > div > p.year_isbn > span.isbn {
+footer.isopen > div.content > div > p.year_isbn > span.isbn {
   display: inline-grid;
   padding-left: 0px;
 }
 
 footer.isopen {
-  height: 300px;
+  height: 295px;
   top: -169px;
+  transition: height 500ms ease-in-out, top 500ms ease-in-out;
+}
+
+footer.isopen > div.content {
+  height: 215px;
   transition: height 500ms ease-in-out, top 500ms ease-in-out;
 }
 
